tests/gabc-dump/should-fail/bad-secondary-clef.gabc
name: bad secondary clef;
%%
(c4@f2@f3) g(g)
